<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arucomarker</name>
  <version>0.0.1</version>
  <description>AruCo marker detection and pose estimation</description>
  <maintainer email="haryeong@todo.todo">haryeong</maintainer>
  <license>Apache-2.0</license>

  <!-- 실행에 필요한 의존성 추가 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <!-- 메시지 패키지 생성을 위한 의존성 추가 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>   
  <exec_depend>rosidl_runtime_py</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
